Updated example config

--- a/ESMF/Shared/Configuration/example_SS_config.yaml
+++ b/ESMF/Shared/Configuration/example_SS_config.yaml
@@ -1,22 +1,25 @@
-NOAA_imports:
+imports:
   SS:
+    standard_name: tba1
+    options:
+      convert2MAPL: 1
+      state: 'export'
     policies:
       TransferOfferGeomObject: 'can provide'
       SharePolicyField:        'share'
       SharePolicyGeomObject:   'share'
-    convert2MAPL: 1
     tracer:
       name: 'inst_mass_tracers'
       entries: [seas1, seas2, seas3, seas4, seas5]
-    state: 'export'
   FROCEAN:
     standard_name: tba2
+    options:
+      convert2MAPL: 1
+      state: 'import'
     policies:
       TransferOfferGeomObject: 'can provide'
       SharePolicyField:        'share'
       SharePolicyGeomObject:   'share'
-    convert2MAPL: 1
-    state: 'import'
 
 tracers:
   inst_mass_tracers:
