Moved field adjustments into configuration utilities

--- a/ESMF/Shared/Configuration/CMakeLists.txt
+++ b/ESMF/Shared/Configuration/CMakeLists.txt
@@ -1,6 +1,7 @@
 esma_set_this()
 
 set (srcs
+        LinearFields.F90
         NOAA_Tracers.F90
         NOAA_MAPLconfig.F90
         NOAA_GOCARTtracers.F90
