--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/MERRA2/NI2G_GridComp_ExtData.rc
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/MERRA2/NI2G_GridComp_ExtData.rc
@@ -14,13 +14,13 @@ climNO3an3  'kg kg-1'  N    Y  F0   none      none     NO3AN3    /home/adasilva/
 #climNO3an3  'kg kg-1'  Y    Y  %y4-%m2-%d2T12:00:00   none      none     NO3AN3    /home/adasilva/opendap/fp/das/Y2017/M02/D01/GEOS.fp.asm.inst3_3d_aer_Nv.20170201_0000.V01.nc4
 
 # ======= Nitrate Sources ========
-EMI_NH3_BB   'kg m-2 s-1'  N      Y      %y4-%m2-%d2T12:00:00    none     none     biomass    ExtData/PIESA/sfc/QFED/v2.4r6/Y%y4/M%m2/qfed2.emis_nh3.005.%y4%m2%d2.nc4 
-EMI_NH3_AG   'kg m-2 s-1'  Y      Y      %y4-%m2-%d2T12:00:00    none     none     nh3_emis   /dev/null 
-EMI_NH3_EN   'kg m-2 s-1'  N      Y      %y4-%m2-%d2T12:00:00    none     none     nh3_emis   ExtData/MERRA2/sfc/edgar-v42.emis_nh3.anthropogenic.x1152_y721.19700703T12z_20200703T00z.nc4 
-EMI_NH3_IN   'kg m-2 s-1'  Y      Y      %y4-%m2-%d2T12:00:00    none     none     nh3_emis   /dev/null 
-EMI_NH3_RE   'kg m-2 s-1'  Y      Y      %y4-%m2-%d2T12:00:00    none     none     nh3_emis   /dev/null
-EMI_NH3_TR   'kg m-2 s-1'  Y      Y      %y4-%m2-%d2T12:00:00    none     none     nh3_emis   /dev/null 
-EMI_NH3_OC   'kg m-2 s-1'  Y      Y      %y4-%m2-%d2T12:00:00    none     none     emiss_ocn   ExtData/PIESA/sfc/GEIA.emis_NH3.ocean.x576_y361.t12.20080715_12z.nc4
+EMI_NH3_BB          'kg m-2 s-1'         N        Y     %y4-%m2-%d2T12:00:00    none     none    biomass    ExtData/PIESA/sfc/QFED/v2.4r6/Y%y4/M%m2/qfed2.emis_nh3.005.%y4%m2%d2.nc4
+EMI_NH3_AG          'kg m-2 s-1'         Y        Y       -                     none     none    emi_nh3    /dev/null
+EMI_NH3_EN          'kg m-2 s-1'         N        Y     %y4-%m2-%d2T12:00:00    none     none    emi_nh3    ExtData/MERRA2/sfc/edgar-v42.emis_nh3.anthropogenic.x1152_y721.19700703T12z_20200703T00z.nc4
+EMI_NH3_IN          'kg m-2 s-1'         Y        Y       -                     none     none    emi_nh3    /dev/null
+EMI_NH3_RE          'kg m-2 s-1'         Y        Y       -                     none     none    emi_nh3    /dev/null
+EMI_NH3_TR          'kg m-2 s-1'         Y        Y       -                     none     none    emi_nh3    /dev/null
+EMI_NH3_OC          'kg m-2 s-1'         Y        Y     %y4-%m2-%d2T12:00:00    none     none    emiss_ocn  ExtData/PIESA/sfc/GEIA.emis_NH3.ocean.x576_y361.t12.20080715_12z.nc4
 
 NITRATE_HNO3 'mol mol-1'   Y      N      %y4-%m2-%d2T12:00:00    none     0.20     hno3        ExtData/PIESA/L72/GMI.vmr_HNO3.x144_y91.t12.2006.nc4
 
