--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/MERRA2/SU2G_GridComp_ExtData.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/MERRA2/SU2G_GridComp_ExtData.rc
@@ -36,23 +36,23 @@ climSUSV004    'kg m-2 s-1'   Y   N               0              0.0      1.0   
 SU_BIOMASS NA  N Y %y4-%m2-%d2t12:00:00 none none biomass ExtData/PIESA/sfc/QFED/v2.4r6/Y%y4/M%m2/qfed2.emis_so2.005.%y4%m2%d2.nc4 
 
 # Anthropogenic (BF & FF) emissions -- allowed to input as two layers
-SU_ANTHROL1 NA  Y Y %y4-%m2-%d2t12:00:00 none none sanl1 ExtData/MERRA2/sfc/edgar-v42.emis_so2.non_energy.x1152_y721.19700703T12z_20200703T00z.nc4
-SU_ANTHROL2 NA  Y Y %y4-%m2-%d2t12:00:00 none none sanl2 ExtData/MERRA2/sfc/edgar-v42.emis_so2.energy.x1152_y721.19700703T12z_20200703T00z.nc4
+SU_ANTHROL1 NA  N Y %y4-%m2-%d2t12:00:00 none none sanl1 ExtData/MERRA2/sfc/edgar-v42.emis_so2.non_energy.x1152_y721.19700703T12z_20200703T00z.nc4
+SU_ANTHROL2 NA  N Y %y4-%m2-%d2t12:00:00 none none sanl2 ExtData/MERRA2/sfc/edgar-v42.emis_so2.energy.x1152_y721.19700703T12z_20200703T00z.nc4
 
 # Ship emissions
-SU_SHIPSO2 NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_ship ExtData/MERRA2/sfc/edgar-v41.emis_so2.navigation.x360_y181_t47.19750703T12z_20210703T00z.nc4
-SU_SHIPSO4 NA  Y Y %y4-%m2-%d2t12:00:00 none none so4_ship ExtData/MERRA2/sfc/edgar-v41.emis_so4.navigation.x360_y181_t47.19750703T12z_20210703T00z.nc4
+SU_SHIPSO2 NA  N Y %y4-%m2-%d2t12:00:00 none none so2_ship ExtData/MERRA2/sfc/edgar-v41.emis_so2.navigation.x360_y181_t47.19750703T12z_20210703T00z.nc4
+SU_SHIPSO4 NA  N Y %y4-%m2-%d2t12:00:00 none none so4_ship ExtData/MERRA2/sfc/edgar-v41.emis_so4.navigation.x360_y181_t47.19750703T12z_20210703T00z.nc4
 
 # Aircraft fuel consumption
-SU_AIRCRAFT NA  Y Y %y4-%m2-%d2t12:00:00 none none fuel ExtData/AeroCom/L72/AeroCom.aircraft_fuel.eta.x288_y181_z72_t14.%y4.nc
+SU_AIRCRAFT NA  N Y %y4-%m2-%d2t12:00:00 none none fuel ExtData/AeroCom/L72/AeroCom.aircraft_fuel.eta.x288_y181_z72_t14.%y4.nc
 
 # DMS concentration
 SU_DMSO NA  Y Y %y4-%m2-%d2t12:00:00 none none conc ExtData/MERRA2/sfc/DMSclim_sfcconcentration.x360_y181_t12.Lana2011.nc4
 
 # Aviation emissions during the three phases of flight
-SU_AVIATION_LTO NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_aviation /dev/null
-SU_AVIATION_CDS NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_aviation /dev/null
-SU_AVIATION_CRS NA  Y Y %y4-%m2-%d2t12:00:00 none none so2_aviation /dev/null
+SU_AVIATION_LTO NA  N Y %y4-%m2-%d2t12:00:00 none none so2_aviation /dev/null
+SU_AVIATION_CDS NA  N Y %y4-%m2-%d2t12:00:00 none none so2_aviation /dev/null
+SU_AVIATION_CRS NA  N Y %y4-%m2-%d2t12:00:00 none none so2_aviation /dev/null
 
 # H2O2, OH and NO3 mixing ratios
 SU_H2O2 NA  N Y %y4-%m2-%d2t12:00:00 none none H2O2 ExtData/MERRA2/L72/gmi_ctm_hindcast.oxidants.x144_y91_z72_t14.%y4.nc4
