--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,53 @@
 version: 2.1
-jobs:
-  build:
+
+executors:
+  gcc-build-env:
     docker:
-      - image: gmao/ubuntu20-geos-env-mkl:6.0.16-openmpi_4.0.5-gcc_10.2.0
+      - image: gmao/ubuntu20-geos-env-mkl:v6.0.22-openmpi_4.0.5-gcc_10.2.0
         auth:
           username: $DOCKERHUB_USER
           password: $DOCKERHUB_AUTH_TOKEN
-    resource_class: xlarge
+    environment:
+      OMPI_ALLOW_RUN_AS_ROOT: 1
+      OMPI_ALLOW_RUN_AS_ROOT_CONFIRM: 1
+      OMPI_MCA_btl_vader_single_copy_mechanism: none
+    #XLARGE# resource_class: xlarge
+    resource_class: medium
+
+workflows:
+  version: 2.1
+  build-test:
+    jobs:
+      - build-GOCART:
+          context:
+            - docker-hub-creds
+
+jobs:
+  build-GOCART:
+    executor: gcc-build-env
+    working_directory: /root/project
     steps:
-      - checkout
+      - checkout:
+          path: GOCART
       - run:
           name: "Versions etc"
           command: mpirun --version && gfortran --version && echo $BASEDIR && pwd && ls
       - run:
           name: "Mepo clone external repos"
           command: |
+            cd ${CIRCLE_WORKING_DIRECTORY}/GOCART
             mepo clone
             mepo status
       - run:
           name: "CMake"
           command: |
+            cd ${CIRCLE_WORKING_DIRECTORY}/GOCART
             mkdir build
             cd build
             cmake .. -DBASEDIR=$BASEDIR/Linux -DCMAKE_Fortran_COMPILER=gfortran -DCMAKE_BUILD_TYPE=Debug
       - run:
           name: "Build"
           command: |
-            cd build
-            make -j"$(nproc)" install
+            cd ${CIRCLE_WORKING_DIRECTORY}/GOCART/build
+            #XLARGE# make -j"$(nproc)" install
+            make -j4 install
