--- a/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
+++ b/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
@@ -28,7 +28,7 @@ PASSIVE_INSTANCES_SS:
 ACTIVE_INSTANCES_SU: SU   #SU.data 
 PASSIVE_INSTANCES_SU:
 
-ACTIVE_INSTANCES_CA:  CA.oc CA.bc #CA.oc.data CA.bc.datac 
+ACTIVE_INSTANCES_CA:  CA.oc CA.bc #CA.oc.data CA.bc.data 
 PASSIVE_INSTANCES_CA:
 
 ACTIVE_INSTANCES_NI:  NI  #NI.data 
