--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_GridComp_ExtData.rc
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_GridComp_ExtData.rc
@@ -14,7 +14,7 @@ climNO3an3  'kg kg-1'  N    Y  F0   none      none     NO3AN3    /home/adasilva/
 #climNO3an3  'kg kg-1'  Y    Y  %y4-%m2-%d2T12:00:00   none      none     NO3AN3    /home/adasilva/opendap/fp/das/Y2017/M02/D01/GEOS.fp.asm.inst3_3d_aer_Nv.20170201_0000.V01.nc4
 
 # ======= Nitrate Sources ========
-EMI_NH3_BB   'kg m-2 s-1'  N      Y      %y4-%m2-%d2T12:00:00    none     none     biomass     ExtData/PIESA/sfc/QFED/NRT/v2.5r1_0.1_deg/Y%y4/M%m2/qfed2.emis_nh3.006.%y4%m2%d2.nc4
+EMI_NH3_BB   'kg m-2 s-1'  N      Y      %y4-%m2-%d2T12:00:00    none     none     0.778     ExtData/PIESA/sfc/QFED/NRT/v2.5r1_0.1_deg/Y%y4/M%m2/qfed2.emis_nh3.006.%y4%m2%d2.nc4
 EMI_NH3_AG   'kg m-2 s-1'  Y      Y      %y4-%m2-%d2T12:00:00    none     none     nh3_emis    ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_nh3.agriculture.x3600_y1800_t12.2010.nc4
 EMI_NH3_EN   'kg m-2 s-1'  Y      Y      %y4-%m2-%d2T12:00:00    none     none     nh3_emis    ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_nh3.energy.x3600_y1800_t12.2010.nc4
 EMI_NH3_IN   'kg m-2 s-1'  Y      Y      %y4-%m2-%d2T12:00:00    none     none     nh3_emis    ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_nh3.industry.x3600_y1800_t12.2010.nc4
