Complete merge by adding missing CMakeLists.txt section.

--- a/ESMF/GOCART2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/CMakeLists.txt
@@ -27,3 +27,7 @@ esma_add_library (${this}
   SUBCOMPONENTS ${alldirs}
   DEPENDENCIES ${dependencies}
   )
+
+mapl_acg (${this}   GOCART2G_StateSpecs.rc
+          IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS
+          GET_POINTERS DECLARE_POINTERS)
