--- a/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
+++ b/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
@@ -34,4 +34,6 @@ PASSIVE_INSTANCES_CA:
 ACTIVE_INSTANCES_NI:  NI  #NI.data 
 PASSIVE_INSTANCES_NI:
 
-
+aerosol_monochromatic_optics_wavelength: 4.7e-7 5.5e-7 6.7e-7 8.7e-7 ! units: m
+wavelengths_for_profile_aop_in_nm: 470 550 870
+wavelengths_for_vertically_integrated_aop_in_nm: 470 550 670 870
