--- a/ESMF/GOCART2G_GridComp/GOCART2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/GOCART2G_StateSpecs.rc
@@ -14,23 +14,23 @@ category: EXPORT
 #----------------------------------------------------------------------------------------
 #  VARIABLE              | DIMENSIONS |          Additional Metadata
 #----------------------------------------------------------------------------------------
- NAME       | UNITS      | DIMS | VLOC | LONG NAME
+ NAME       | UNITS      | DIMS | VLOC |  UNGRIDDED | LONG NAME
 #----------------------------------------------------------------------------------------
- PSO4TOT    | kg m-2 s-1 | xyz  | C    | Total Sulfate Produced in GOCART
+ PSO4TOT    | kg m-2 s-1 | xyz  | C    |            | Total Sulfate Produced in GOCART
 #........................................................................................
- TOTEXTTAU  | 1          | xy   | N    | Total Aerosol Extinction AOT [550 nm]
- TOTSCATAU  | 1          | xy   | N    | Total Aerosol Scattering AOT [550 nm]
- TOTEXTT25  | 1          | xy   | N    | Total Aerosol Extinction AOT [550 nm] - PM2.5
- TOTSCAT25  | 1          | xy   | N    | Total Aerosol Extinction AOT [550 nm] - PM2.5
- TOTEXTTFM  | 1          | xy   | N    | Total Aerosol Extinction AOT [550 nm] - PM1.0
- TOTSCATFM  | 1          | xy   | N    | Total Aerosol Extinction AOT [550 nm] - PM1.0
- TOTANGSTR  | 1          | xy   | N    | Total Aerosol Angstrom parameter [470-870 nm]
- PM         | kg m-3     | xy   | N    | Total reconstructed PM
- PM_RH35    | kg m-3     | xy   | N    | Total reconstructed PM(RH=35%)
- PM_RH50    | kg m-3     | xy   | N    | Total reconstructed PM(RH=50%)
- PM25       | kg m-3     | xy   | N    | Total reconstructed PM2.5
- PM25_RH35  | kg m-3     | xy   | N    | Total reconstructed PM2.5(RH=35%)
- PM25_RH50  | kg m-3     | xy   | N    | Total reconstructed PM2.5(RH=50%)
+ TOTEXTTAU  | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Extinction AOT [550 nm]
+ TOTSCATAU  | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Scattering AOT [550 nm]
+ TOTEXTT25  | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Extinction AOT [550 nm] - PM2.5
+ TOTSCAT25  | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Extinction AOT [550 nm] - PM2.5
+ TOTEXTTFM  | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Extinction AOT [550 nm] - PM1.0
+ TOTSCATFM  | 1          | xy   | N    | size(self%wavelengths_vertint) | Total Aerosol Extinction AOT [550 nm] - PM1.0
+ TOTANGSTR  | 1          | xy   | N    |            | Total Aerosol Angstrom parameter [470-870 nm]
+ PM         | kg m-3     | xy   | N    |            | Total reconstructed PM
+ PM_RH35    | kg m-3     | xy   | N    |            | Total reconstructed PM(RH=35%)
+ PM_RH50    | kg m-3     | xy   | N    |            | Total reconstructed PM(RH=50%)
+ PM25       | kg m-3     | xy   | N    |            | Total reconstructed PM2.5
+ PM25_RH35  | kg m-3     | xy   | N    |            | Total reconstructed PM2.5(RH=35%)
+ PM25_RH50  | kg m-3     | xy   | N    |            | Total reconstructed PM2.5(RH=50%)
 
 category: INTERNAL
 #----------------------------------------------------------------------------------------
