--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/NI2G_StateSpecs.rc
@@ -54,8 +54,8 @@ category: EXPORT
   NH4CONC   | kg m-3     | xyz | C   |           | Ammonium Mass Concentration 
   NICONC    | kg m-3     | xyz | C   |           | Nitrate Mass Concentration 
   NICONC25  | kg m-3     | xyz | C   |           | Nitrate Mass Concentration [PM2.5] 
-  NIEXTCOEF | m-1        | xyz | C   |           | Nitrate Extinction Coefficient [550 nm] 
-  NISCACOEF | m-1        | xyz | C   |           | Nitrate Scattering Coefficient [550 nm] 
+  NIEXTCOEF | m-1        | xyz | C   | size(self%wavelengths_profile)          | Nitrate Extinction Coefficient [550 nm] 
+  NISCACOEF | m-1        | xyz | C   | size(self%wavelengths_profile)          | Nitrate Scattering Coefficient [550 nm] 
 # ..........|............|.....|.....|...........|..................................
   NIPNO3AQ  | kg m-2 s-1 | xy  | N   |           | Nitrate Production from Aqueous Chemistry  
   NIPNH4AQ  | kg m-2 s-1 | xy  | N   |           | Ammonium Production from Aqueous Chemistry 
@@ -83,12 +83,12 @@ category: EXPORT
   NH4CMASS  | kg m-3     | xy  | N   |           | Ammonium Column Mass Density 
   NICMASS   | kg m-2     | xy  | N   |           | Nitrate Column Mass Density 
   NICMASS25 | kg m-2     | xy  | N   |           | Nitrate Column Mass Density [PM2.5] 
-  NIEXTTFM  |      1     | xy  | N   |           | Nitrate Extinction AOT [550 nm] - PM 1.0 um 
-  NISCATFM  |      1     | xy  | N   |           | Nitrate Scattering AOT [550 nm] - PM 1.0 um 
-  NIEXTT25  |      1     | xy  | N   |           | Nitrate Extinction AOT [550 nm] - PM 2.5 um 
-  NISCAT25  |      1     | xy  | N   |           | Nitrate Scattering AOT [550 nm] - PM 2.5 um 
-  NIEXTTAU  |      1     | xy  | N   |           | Nitrate Extinction AOT [550 nm] 
-  NISCATAU  |      1     | xy  | N   |           | Nitrate Scattering AOT [550 nm] 
+  NIEXTTFM  |      1     | xy  | N   | size(self%wavelengths_vertint)          | Nitrate Extinction AOT [550 nm] - PM 1.0 um 
+  NISCATFM  |      1     | xy  | N   | size(self%wavelengths_vertint)          | Nitrate Scattering AOT [550 nm] - PM 1.0 um 
+  NIEXTT25  |      1     | xy  | N   | size(self%wavelengths_vertint)          | Nitrate Extinction AOT [550 nm] - PM 2.5 um 
+  NISCAT25  |      1     | xy  | N   | size(self%wavelengths_vertint)          | Nitrate Scattering AOT [550 nm] - PM 2.5 um 
+  NIEXTTAU  |      1     | xy  | N   | size(self%wavelengths_vertint)          | Nitrate Extinction AOT [550 nm] 
+  NISCATAU  |      1     | xy  | N   | size(self%wavelengths_vertint)          | Nitrate Scattering AOT [550 nm] 
   NIANGSTR  |      1     | xy  | N   |           | Nitrate Angstrom parameter [470-870 nm] 
   NIFLUXU   | kg m-1 s-1 | xy  | N   |           | Nitrate column u-wind mass flux 
   NIFLUXV   | kg m-1 s-1 | xy  | N   |           | Nitrate column v-wind mass flux 
