--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_GridComp_CA.bc.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_GridComp_CA.bc.rc
@@ -5,10 +5,7 @@
 nbins:  2 
 
 aerosol_radBands_optics_file: ExtData/MERRA2/x/opticsBands_BC.v1_3.RRTMG.nc
-
 aerosol_monochromatic_optics_file: ExtData/AeroCom/x/optics_BC.v1_3.nc
-aerosol_monochromatic_optics_wavelength: 4.7e-7 5.5e-7 6.7e-7 8.7e-7 ! units: nm
-n_channels: 4
 
 # Heights [m] of LTO, CDS and CRS aviation emissions layers
 aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
@@ -32,6 +29,7 @@ fnum: 1.50e19  1.50e19
 particle_radius_microns: 0.35 0.35
 
 rhFlag: 0
+particle_density: 1800   1800
 
 # Sigma of lognormal number distribution
 sigma: 2.0  2.0
