--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_GridComp_CA.oc.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_GridComp_CA.oc.rc
@@ -3,10 +3,7 @@
 #
 
 aerosol_radBands_optics_file: ExtData/MERRA2/x/opticsBands_OC.v1_3.RRTMG.nc
-
 aerosol_monochromatic_optics_file: ExtData/AeroCom/x/optics_OC.v1_3.nc
-aerosol_monochromatic_optics_wavelength: 4.7e-7 5.5e-7 6.7e-7 8.7e-7 ! units: nm
-n_channels: 4
 
 # Heights [m] of LTO, CDS and CRS aviation emissions layers
 aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
@@ -19,6 +16,8 @@ pom_oc_ratio: 1.4
 
 # particle radius
 particle_radius_microns: 0.35 0.35
+
+particle_density: 1800 1800
 
 rhFlag: 0
 
@@ -41,5 +40,7 @@ fnum: 9.76e17  9.76e17
 sigma: 2.20  2.20
 
 pressure_lid_in_hPa: 0.01
+
+#point_emissions_srcfilen:  /gpfsm/dnb32/esherman/gocartRefactor/RC/CA2G_point_src_test.rc
 
 nbins: 2 
