--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_GridComp_DU.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_GridComp_DU.rc
@@ -3,10 +3,7 @@
 #
 
 aerosol_radBands_optics_file: ExtData/MERRA2/x/opticsBands_DU.v15_3.RRTMG.nc 
-
 aerosol_monochromatic_optics_file:ExtData/AeroCom/x/optics_DU.v15_3.nc
-aerosol_monochromatic_optics_wavelength: 4.7e-7 5.5e-7 6.7e-7 8.7e-7 ! units: nm
-n_channels: 4
 
 particle_radius_microns: 0.73 1.4 2.4 4.5 8.0
 
@@ -40,4 +37,5 @@ nbins: 5
 
 pressure_lid_in_hPa: 0.01
 
+#point_emissions_srcfilen: /gpfsm/dnb32/esherman/gocartRefactor/RC/CA2G_point_src_test.rc
 
