--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_GridComp_SU.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/SU2G_GridComp_SU.rc
@@ -3,10 +3,7 @@
 #
 
 aerosol_radBands_optics_file: ExtData/MERRA2/x/opticsBands_SU.v1_3.RRTMG.nc
-
 aerosol_monochromatic_optics_file: ExtData/AeroCom/x/optics_SU.v1_3.nc
-aerosol_monochromatic_optics_wavelength: 4.7e-7 5.5e-7 6.7e-7 8.7e-7
-n_channels: 4
 
 nbins: 4
 
@@ -47,6 +44,8 @@ particle_radius_number: -1  -1  0.0695  -1
 
 # Sigma of lognormal number distribution
 sigma: -1  -1  2.03  -1
+
+#point_emissions_srcfilen: /gpfsm/dnb32/esherman/gocartRefactor/RC/CA2G_point_src_test.rc
 
 # OH H2O2 NO3 from GMI Combined Stratosphere Troposphere (Lower case yes to enable)
 # -------------------------------------------------------------------------------------
