Add GOCART_GridComp to esma_add_subdirectories

--- a/ESMF/CMakeLists.txt
+++ b/ESMF/CMakeLists.txt
@@ -6,6 +6,7 @@ esma_add_subdirectories(
         Apps
         Shared
         Aerosol_GridComp
+        GOCART_GridComp
         GOCART2G_GridComp
         HEMCO_GridComp
 )
