--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ workflows:
   version: 2.1
   build-and-test:
     jobs:
-      - build-GOCART:
+      - build-GOCART2G:
           context:
             - docker-hub-creds
       - build-GEOSgcm:
@@ -26,7 +26,7 @@ workflows:
             - docker-hub-creds
 
 jobs:
-  build-GOCART:
+  build-GOCART2G:
     executor: gcc-build-env
     working_directory: /root/project
     steps:
@@ -49,11 +49,11 @@ jobs:
             cd build
             cmake .. -DBASEDIR=$BASEDIR/Linux -DCMAKE_Fortran_COMPILER=gfortran -DCMAKE_BUILD_TYPE=Debug -DUSE_F2PY=OFF -DMPIEXEC_PREFLAGS='--oversubscribe'
       - run:
-          name: "Build and install"
+          name: "Build GOCART2G_GridComp"
           command: |
             cd ${CIRCLE_WORKING_DIRECTORY}/GOCART/build
             #XLARGE# make -j"$(nproc)" install
-            make -j4 install
+            make -j4 GOCART2G_GridComp
 
   build-GEOSgcm:
     executor: gcc-build-env
