Build as 32-bit only within the UFS weather model.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,12 +30,14 @@ set (DOING_GEOS5 YES)
 set (ACG_FLAGS -v)
 set (FV_PRECISION R4R8)
 
+if (BUILD_UFS)
 # Ensure we build as 32-bit
-message ("Force 32-bit build for GOCART")
-if (CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
-  string (REPLACE "-real-size 64" "" CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}")
-elseif (CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
-  string (REPLACE "-fdefault-real-8" "" CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}")
+  message ("Force 32-bit build for GOCART")
+  if (CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
+    string (REPLACE "-real-size 64" "" CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}")
+  elseif (CMAKE_Fortran_COMPILER_ID MATCHES "GNU")
+    string (REPLACE "-fdefault-real-8" "" CMAKE_Fortran_FLAGS "${CMAKE_Fortran_FLAGS}")
+  endif()
 endif()
 
 if (NOT COMMAND esma)
