--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -3,21 +3,34 @@
 # Order is important; the last matching pattern takes the most
 # precedence.
 
-# Everything in GEOSgcm should be owned by the GCM Gatekeepers
-* @GEOS-ESM/aerosol-team
+# Everything in GOCART should be owned by the Chem gatekeepers
+* @GEOS-ESM/chemistry-gatekeepers
+
+# NOAA Extras are Tom, William for now
+/CCPP/                  @tclune @WilliamJamieson
+/ESMF/Aerosol_GridComp/ @tclune @WilliamJamieson
+/ESMF/NUOPC/            @tclune @WilliamJamieson
+/ESMF/Shared/           @tclune @WilliamJamieson
+/ESMF/UFS/              @tclune @WilliamJamieson
+
+# GOCART code reflects Chem GridComp
+/ESMF/GOCART_GridComp/   @GEOS-ESM/aerosol-team @GEOS-ESM/chemistry-gatekeepers
+
+# GOCART2G is Elliot for now
+#/ESMF/GOCART2G_GridComp/ @GEOS-ESM/aerosol-team @GEOS-ESM/chemistry-gatekeepers
+/ESMF/GOCART2G_GridComp/ @gmao-esherman
 
 # The CMake Team should know/approve these
 /.github/    @GEOS-ESM/cmake-team
 /.circleci/  @GEOS-ESM/cmake-team
 /.codebuild/ @GEOS-ESM/cmake-team
 
-# NOAA Extras are Tom and William for now
-/CCPP/                  @tclune @WilliamJamieson
-/ESMF/Aerosol_GridComp/ @tclune @WilliamJamieson
-/ESMF/NUOPC/            @tclune @WilliamJamieson
-
 # The GEOS CMake Team should be notified about and approve config changes
-/config/       @GEOS-ESM/cmake-team
+/config/ @GEOS-ESM/cmake-team
+
+# The Python Transition Team will own Python files
+# until the Python 3 transition is completed
+*.py @GEOS-ESM/python-transition-team
 
 # The GEOS CMake Team is the CODEOWNER for the CMakeLists.txt files in this repository
 CMakeLists.txt @GEOS-ESM/cmake-team
