--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_GridComp_DU.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_GridComp_DU.rc
@@ -37,5 +37,13 @@ nbins: 5
 
 pressure_lid_in_hPa: 0.01
 
+# Emissions methods
+emission_scheme: 1       # 1 for GOCART, 2 for FENGSHA
+
+# FENGSHA settings
+alpha: 0.3
+gamma: 1.3
+vertical_to_horizontal_flux_ratio_limit: 2.e-04
+
 #point_emissions_srcfilen: /gpfsm/dnb32/esherman/gocartRefactor/RC/CA2G_point_src_test.rc
 
