--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
@@ -41,22 +41,22 @@ category: EXPORT
  DUMASS     | kg kg-1    | xyz | C  |                          | Dust Mass Mixing Ratio
  DUMASS25   | kg kg-1    | xyz | C  |                          | Dust Mass Mixing Ratio
  DUCONC     | kg m-3     | xyz | C  |                          | Dust Mass Concentration
- DUEXTCOEF  | m-1        | xyz | C  | size(self%wavelengths_profile) | Dust Extinction Coefficient [550 nm]
- DUSCACOEF  | m-1        | xyz | C  | size(self%wavelengths_profile) | Dust Scattering Coefficient [550 nm]
+ DUEXTCOEF  | m-1        | xyz | C  | size(self%wavelengths_profile) | Dust Extinction Coefficient
+ DUSCACOEF  | m-1        | xyz | C  | size(self%wavelengths_profile) | Dust Scattering Coefficient
 #........................................................................................
  DUSMASS    | kg m-3     | xy  | N  |                          | Dust Surface Mass Concentration
  DUCMASS    | kg m-2     | xy  | N  |                          | Dust Column Mass Density
- DUEXTTAU   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Extinction AOT [550 nm]
- DUSCATAU   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Scattering AOT [550 nm]
+ DUEXTTAU   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Extinction AOT 
+ DUSCATAU   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Scattering AOT
  DUSMASS25  | kg m-3     | xy  | N  |                          | Dust Surface Mass Concentration - PM 2.5
  DUCMASS25  | kg m-2     | xy  | N  |                          | Dust Column Mass Density - PM 2.5
- DUEXTT25   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Extinction AOT [550 nm] - PM 2.5
- DUSCAT25   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Scattering AOT [550 nm] - PM 2.5
+ DUEXTT25   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Extinction AOT - PM 2.5
+ DUSCAT25   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Scattering AOT - PM 2.5
  DUAERIDX   |    1       | xy  | N  |                          | Dust TOMS UV Aerosol Index
  DUFLUXU    | kg m-1 s-1 | xy  | N  |                          | Dust column u-wind mass flux
  DUFLUXV    | kg m-1 s-1 | xy  | N  |                          | Dust column v-wind mass flux  
- DUEXTTFM   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Extinction AOT [550 nm] - PM 1.0 um  
- DUSCATFM   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Scattering AOT [550 nm] - PM 1.0 um  
+ DUEXTTFM   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Extinction AOT - PM 1.0 um  
+ DUSCATFM   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Scattering AOT - PM 1.0 um  
  DUANGSTR   |    1       | xy  | N  |                          | Dust Angstrom parameter [470-870 nm]
  DUEM       | kg m-2 s-1 | xy  | N  | self%nbins               | Dust Emission (Bin %d)
  DUSD       | kg m-2 s-1 | xy  | N  | self%nbins               | Dust Sedimentation (Bin %d)
